# inventory-backend

./: README.md  pyproject.toml
migrations/versions/: 0876b1c80bfb_initial_migration_item_location_bin.py
src/: inventory_app.py  seed.py
src/app/: __init__.py  config.py
src/app/models/: __init__.py  bin.py  item.py  location.py
src/app/routes/: __init__.py  bin_routes.py  item_routes.py  location_routes.py  main_routes.py
src/app/schemas/: bin.py  item.py  location.py
src/app/services/: bin_service.py  item_service.py  location_service.py
src/app/templates/errors/: 404.html
src/inventory_backend/app/: __init__.py
src/inventory_backend/app/errors/: handlers.py
src/inventory_backend/app/routes/: __init__.py  main_routes.py
src/inventory_backend/app/templates/: index.html
tests/services/: test_item_service.py
