[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inventory-backend"
version = "0.1.0"
description = "A Flask application for managing inventory."
authors = [
  { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = { text="MIT" }
keywords = ["flask", "inventory"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
  "Flask",
  "Flask-Cors",
  "Flask-SQLAlchemy",
  "Flask-Migrate",
  "Flask-Marshmallow",
  "marshmallow",
  "marshmallow-sqlalchemy",
  "psycopg2-binary"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "flake8",
  "hatch"
]

[tool.hatch.build.targets.wheel]
include = ["inventory-backend/**/*"]